--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-quinn = "0.6"
-tokio = { version = "0.2", features = ["full"] }
+# quinn = { version = "0.6", path = "../quinn/quinn" }
+quinn = "0.6.1"
+tokio = { version = "^0.2.20", features = ["full"] }
 rustls = { version = "0.17", features = ["dangerous_configuration"] }
 webpki = "0.21"
 anyhow = "1.0"
